kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dyson-ingress-taxirides
  namespace: dyson
  labels:
    app: dyson
spec:
  defaultBackend:
    service:
      name: dyson-taxirides
      port:
        number: 80
