kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dyson # {"$kpt-set":"service-name"}
  namespace: dyson
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: dyson # {"$kpt-set":"app-name"}
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dyson-ingress
  namespace: dyson
spec:
  defaultBackend:
    service:
      name: dyson
      port:
        number: 80
